<resources>
    <string name="app_name">WiFi Signal Scanner</string>
    <string name="signal_scanner_settings">Signal Scanner Settings</string>
    <string name="router_ssid_input_label">Router SSID</string>
    <string name="default_router_ssid">ASUS</string>
    <string name="scan_interval_input_label">Scan Interval (Seconds)</string>
    <string name="default_scan_interval">1</string>
    <string name="save_csv">.CSV</string>
    <string name="save_txt">.TXT</string>
    <string name="save_data_button_text">Save Data</string>
    <string name="show_timestamp">Show Timestamp</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>