<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#979797">

    <TextView
        android:id="@+id/signalScannerSettingsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Signal Scanner Settings"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/routerSSIDInputLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/routerSSIDInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/router_ssid_input_label"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/routerSSIDInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/routerSSIDInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/router_ssid_input_label"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/default_router_ssid"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/scanIntervalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scanIntervalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_interval_input_label"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/scanIntervalInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/scanIntervalInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/scan_interval_input_label"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/default_scan_interval"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/saveDataHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select all file formats to save data"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/saveCSVCheckbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/saveDataHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Save Data"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/saveCSVCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save_csv"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/saveTXTCheckbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/saveTXTCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_txt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/saveDataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveDataButton"
        android:layout_width="131dp"
        android:layout_height="52dp"
        android:layout_marginBottom="28dp"
        android:text="@string/save_data_button_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/uiSettingsHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/uiSettingsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UI Settings"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/showTimestampCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/showTimestampCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="Show Timestamp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/finalButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/finalButtons"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/closeSettingsPopupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            app:backgroundTint="#AEAEAE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveSettingsPopupButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveSettingsPopupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/closeSettingsPopupButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>